# eqswift

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
cargo-eqswift/: Cargo.toml
cargo-eqswift/src/: main.rs
eq-swift/: Cargo.toml  README.md
eq-swift/src/: lib.rs  test.uniffi.rs
eq-swift/swift/Sources/EqSwift/: EqSwift.swift
eq-swift/tests/: integration.rs
eqswift-macros/: Cargo.toml
eqswift-macros/src/: lib.rs
examples/demo/: Cargo.toml
examples/demo/src/: lib.rs
examples/otto-ffi/: Cargo.toml
examples/otto-ffi/src/: lib.rs
examples/otto-ffi/swift/: otto_ffi.swift  otto_ffiFFI.h  otto_ffiFFI.modulemap
src/: eq_swift.udl  lib.rs
swift/: Package.swift
swift/Sources/EqSwift/: EqSwift.swift
