[package]
name = "cargo-eqswift"
version = "0.1.1"
edition = "2021"
authors = ["eqswift contributors"]
description = "cargo subcommand for eqswift — generate Swift/Kotlin/Python bindings with one command"
license = "MIT"
repository = "https://github.com/semitechnological/eqswift"
keywords = ["cargo-subcommand", "ffi", "swift", "uniffi", "bindings"]
categories = ["development-tools::cargo-plugins", "development-tools::ffi"]
rust-version = "1.70"

[[bin]]
name = "cargo-eqswift"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
cargo_metadata = "0.18"
fs-err = "2.11"
