[package]
name = "eqswift-macros"
version = "0.1.1"
edition = "2021"
authors = ["Max Carter <max@undivisible.dev>"]
description = "Proc-macros for eqswift — zero-config Rust-to-Swift FFI"
license = "MPL-2.0"
repository = "https://github.com/semitechnological/eqswift"
keywords = ["ffi", "swift", "uniffi", "bindings", "proc-macro"]
categories = ["development-tools::ffi"]
rust-version = "1.70"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
